--- a/index.html
+++ b/index.html
@@ -3,32 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi App</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Tu App Increíble</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+        .hero-bg { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
+        .smooth-scroll { scroll-behavior: smooth; }
+        .hover-scale { transition: transform 0.3s ease; }
+        .hover-scale:hover { transform: scale(1.05); }
+    </style>
 </head>
-<body>
-    <header>
-        <h1>Bienvenido a Mi App</h1>
-        <p>La mejor app para [describe tu función principal].</p>
-        <a href="#contacto" class="btn">Contáctanos</a>
+<body class="bg-gray-50 smooth-scroll">
+    <!-- Header -->
+    <header class="bg-white shadow-sm fixed w-full z-10">
+        <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
+            <h1 class="text-2xl font-bold text-blue-900">Tu App Increíble</h1>
+            <div class="space-x-4">
+                <a href="#features" class="text-gray-600 hover:text-blue-600">Características</a>
+                <a href="#stats" class="text-gray-600 hover:text-blue-600">Por qué nosotros</a>
+                <a href="#download" class="text-gray-600 hover:text-blue-600">Descargar</a>
+            </div>
+        </nav>
     </header>
 
-    <section id="features">
-        <h2>Características</h2>
-        <ul>
-            <li>Fácil de usar</li>
-            <li>Rápida y segura</li>
-            <li>Disponible en todos los dispositivos</li>
-        </ul>
+    <!-- Hero Section -->
+    <section id="home" class="hero-bg text-white h-screen flex flex-col justify-center items-center text-center px-4 pt-16">
+        <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-6 leading-tight">Cambia la forma en que manejas tu vida</h1>
+        <p class="text-lg sm:text-xl md:text-2xl mb-8 max-w-3xl">Hogar o lejos, local o global — mueve tu mundo con libertad. Descarga la app y comienza en un toque.</p>
+        <a href="https://www.apple.com/app-store/" target="_blank" class="bg-white text-blue-900 font-semibold py-3 px-8 rounded-full hover:bg-blue-100 hover-scale flex items-center">
+            <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2.04.81-3.29.79-1.34-.02-2.22-1.23-3.05-2.47-1.76-2.68-3.11-7.56-1.26-10.86 1.01-1.76 2.79-2.86 4.74-2.86 1.48 0 2.94.79 3.84.79.89 0 2.57-.79 4.33-.79 1.65 0 3.39 1.01 4.64 2.67-.17 1.03-.65 2.56-1.45 3.92-.89 1.51-2.06 3.03-3.56 3.03-.56 0-1.25-.25-1.85-.5-.77-.32-1.57-.32-2.34 0-.60.25-1.29.5-1.85.5zM12 4.98c-.89 0-1.71-.45-2.34-1.21-.56-.67-.98-1.51-1.14-2.45 0-.12-.01-.24-.01-.36C9.74.45 11.25 0 12.75 0c.89 0 1.71.45 2.34 1.21.56.67.98 1.51 1.14 2.45 0 .12.01.24.01.36-1.23.45-2.74.9-4.24.9z"/>
+            </svg>
+            Descargar en la App Store
+        </a>
     </section>
 
-    <section id="contacto">
-        <h2>Contacto</h2>
-        <p>Escríbenos a <a href="mailto:contacto@miapp.com">contacto@miapp.com</a></p>
+    <!-- Features Section -->
+    <section id="features" class="py-20 bg-white text-center">
+        <h2 class="text-3xl sm:text-4xl font-bold text-gray-900 mb-12">Tu vida, reimaginada</h2>
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 px-4">
+            <div class="p-6 bg-gray-50 rounded-lg hover-scale">
+                <h3 class="text-xl font-semibold text-blue-900 mb-4">Gestión Inteligente</h3>
+                <p class="text-gray-600">Organiza tu día automáticamente y alcanza tus metas con facilidad.</p>
+            </div>
+            <div class="p-6 bg-gray-50 rounded-lg hover-scale">
+                <h3 class="text-xl font-semibold text-blue-900 mb-4">Acceso Global</h3>
+                <p class="text-gray-600">Conecta con el mundo, sin importar dónde estés, en un solo toque.</p>
+            </div>
+            <div class="p-6 bg-gray-50 rounded-lg hover-scale">
+                <h3 class="text-xl font-semibold text-blue-900 mb-4">Seguridad Total</h3>
+                <p class="text-gray-600">Tu tranquilidad está garantizada con nuestra protección 24/7.</p>
+            </div>
+        </div>
     </section>
 
-    <footer>
-        <p>© 2025 Mi App. Todos los derechos reservados.</p>
+    <!-- Stats Section -->
+    <section id="stats" class="py-20 bg-blue-50 text-center">
+        <h2 class="text-3xl sm:text-4xl font-bold text-gray-900 mb-12">Únete a millones de usuarios</h2>
+        <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 px-4">
+            <div>
+                <p class="text-2xl font-bold text-blue-900">60M+</p>
+                <p class="text-gray-600">Usuarios globales</p>
+            </div>
+            <div>
+                <p class="text-2xl font-bold text-blue-900">#3</p>
+                <p class="text-gray-600">App financiera descargada</p>
+            </div>
+            <div>
+                <p class="text-2xl font-bold text-blue-900">4.5/5</p>
+                <p class="text-gray-600">En Trustpilot</p>
+            </div>
+            <div>
+                <p class="text-2xl font-bold text-blue-900">2024</p>
+                <p class="text-gray-600">Empresa más innovadora</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section id="download" class="py-20 bg-gradient-to-r from-blue-600 to-purple-600 text-white text-center">
+        <h2 class="text-3xl sm:text-4xl font-bold mb-6">Descarga la app ahora</h2>
+        <p class="text-lg sm:text-xl mb-8 max-w-2xl mx-auto">Únete a la revolución y transforma tu forma de vivir. Disponible gratis en la App Store.</p>
+        <a href="https://www.apple.com/app-store/" target="_blank" class="bg-white text-blue-900 font-semibold py-3 px-8 rounded-full hover:bg-blue-100 hover-scale flex items-center mx-auto">
+            <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2.04.81-3.29.79-1.34-.02-2.22-1.23-3.05-2.47-1.76-2.68-3.11-7.56-1.26-10.86 1.01-1.76 2.79-2.86 4.74-2.86 1.48 0 2.94.79 3.84.79.89 0 2.57-.79 4.33-.79 1.65 0 3.39 1.01 4.64 2.67-.17 1.03-.65 2.56-1.45 3.92-.89 1.51-2.06 3.03-3.56 3.03-.56 0-1.25-.25-1.85-.5-.77-.32-1.57-.32-2.34 0-.60.25-1.29.5-1.85.5zM12 4.98c-.89 0-1.71-.45-2.34-1.21-.56-.67-.98-1.51-1.14-2.45 0-.12-.01-.24-.01-.36C9.74.45 11.25 0 12.75 0c.89 0 1.71.45 2.34 1.21.56.67.98 1.51 1.14 2.45 0 .12.01.24.01.36-1.23.45-2.74.9-4.24.9z"/>
+            </svg>
+            Descargar en la App Store
+        </a>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-12 text-center">
+        <div class="max-w-7xl mx-auto px-4">
+            <p class="text-lg font-semibold mb-4">Tu App Increíble</p>
+            <div class="flex justify-center space-x-4 mb-4">
+                <a href="#" class="text-gray-400 hover:text-white">Términos</a>
+                <a href="#" class="text-gray-400 hover:text-white">Privacidad</a>
+                <a href="#" class="text-gray-400 hover:text-white">Contacto</a>
+            </div>
+            <p class="text-gray-400">&copy; 2025 Tu App Increíble. Todos los derechos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
