--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div id="phoneVisual" class="relative flex justify-center lg:justify-end mt-12 lg:mt-0 opacity-0 translate-y-12 transition-all duration-1000 ease-out">
                 <div class="p-4 bg-white rounded-[40px] shadow-float max-w-sm w-full border border-gray-300 transform lg:translate-x-12 hover:scale-[1.02] transition duration-500">
                     <img 
-                        src="WhatsApp Image 2025-10-23 at 12.47.05 PM.jpeg" 
+                        src="FactuAI.jpeg" 
                         alt="Pantalla de la aplicación FactuAI con gráficos y resumen de gastos detallados." 
                         class="w-full h-auto rounded-3xl object-cover"
                         onerror="this.onerror=null; this.src='https://placehold.co/400x800/F7F7F7/5B4AFF?text=IMAGEN+NO+CARGADA'" 
