--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <span class="block text-primary-accent">60% se cierra hoy.</span>
                 </h1>
 
-                <p class="mt-6 text-2xl text-gray-600 max-w-xl lg:max-w-none">
-                    Más del 60% de la población no sabe dónde va su dinero. **FactuAI te da la claridad, la estrategia y la ventaja** para cambiar tu vida y construir tu verdadera libertad financiera.
+                <p class="mt-6 text-2xl text-gray-600 max-w-xl lg:max-w-none leading-relaxed">
+                  Más del 60% de la población no sabe a dónde va su dinero. <strong>FactuAI</strong> te ofrece la claridad, la estrategia y la ventaja que necesitas para transformar tu vida y construir tu verdadera libertad financiera.
                 </p>
 
                 <button id="downloadButton" onclick="handleDownload()" class="mt-10 px-10 py-4 text-lg font-bold rounded-full bg-primary-accent text-white shadow-float hover:bg-indigo-700 transition duration-300 transform hover:scale-[1.02]">
