--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="brain icon original.png">
     <title>FactuAI - La Solución Definitiva para tus Finanzas</title>
-    
     <script src="https://cdn.tailwindcss.com"></script>
     
     <script>
